--- a/web/src/dialog/export/index.css
+++ b/web/src/dialog/export/index.css
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   flex-direction: row;
-  max-height: 100%;
+  max-height: 295px;
 }
 
 .options {
@@ -15,7 +15,6 @@
   flex-grow: 2;
   background-color: var(--color--background-overlay);
   margin: 16px;
-  max-height: 100%;
   overflow: auto;
 }
 
